# SampleProject

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODOS.md
include/sample_project/: hello.h
src/: hello.c  main.c
